fix z-index header

--- a/web-app/components/Header/Header.module.scss
+++ b/web-app/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
 
     z-index: 50;
 
-    position: static;
+    position: relative;
 
     display: flex;
     flex-direction: row;
